--- a/src/style.css
+++ b/src/style.css
@@ -1,8 +1,35 @@
-@import url("https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Nunito:wght@400;700;800&family=Roboto:wght@400;500;700&display=swap");
-
-h1 {
-    font-family: "Nunito", sans-serif;
+@import url("https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Poppins:wght@500;700&display=swap");
+:root {
+    --branding-color: #6c63ff;
+    --heading-font-family: "Playfair Display", serif;
+    --default-font-family: "Poppins", sans-serif;
 }
-h2 {
-    font-family: "Roboto", sans-serif;
+.hero {
+    background-color: #f9f7fe;
+    text-align: center;
+    padding: 160px 20px;
+}
+.hero p {
+    font-family: var(--default-font-family);
+    font-size: 36px;
+    font-weight: bold;
+    color: #272142;
+}
+.hero h1 {
+    font-family: var(--heading-font-family);
+    font-size: 96px;
+}
+.hero h2 {
+    font-family: var(--default-font-family);
+    font-weight: normal;
+    font-size: 24px;
+    line-height: 2;
+}
+.btn-branding {
+    background-color: var(--branding-color);
+    border-radius: 4px;
+    color: white;
+    font-size: 18px;
+    line-height: 27px;
+    padding: 17px 20px;
 }
