--- a/src/style.css
+++ b/src/style.css
@@ -18,12 +18,13 @@
 .hero h1 {
     font-family: var(--heading-font-family);
     font-size: 96px;
+    line-height: 1.5;
 }
 .hero h2 {
     font-family: var(--default-font-family);
     font-weight: normal;
     font-size: 24px;
-    line-height: 2;
+    line-height: 1.5;
 }
 .btn-branding {
     background-color: var(--branding-color);
@@ -32,4 +33,37 @@
     font-size: 18px;
     line-height: 27px;
     padding: 17px 20px;
+}
+h2 {
+    font-size: 64px;
+}
+p {
+    font-size: 16px;
+    line-height: 30px;
+}
+.btn-branding-outline {
+    font-size: 18px;
+    line-height: 27px;
+    padding: 17px 20px;
+    border-radius: 4px;
+    color: var(--branding-color);
+    border: 1px solid var(--branding-color);
+}
+.project-description {
+    padding: 120px 60pxpx;
+}
+@media (max-width: 900px) {
+    .hero {
+        padding: 80px 20px;
+    }
+    .hero h1 {
+        font-size: 44px;
+    }
+    h2 {
+        font-size: 44px;
+    }
+    .project-description {
+        padding: 0;
+        text-align: center;
+    }
 }
