--- a/src/style.css
+++ b/src/style.css
@@ -9,7 +9,7 @@
     text-align: center;
     padding: 160px 20px;
 }
-.about-section {
+.content-container {
     padding: 160px 20px;
 }
 .hero p {
@@ -78,20 +78,33 @@ p {
         padding: 0;
         text-align: center;
     }
-    .about-section {
+    .content-container {
         text-align: center;
         padding: 0;
     }
 }
-.about-section h1 {
+.content-container h1 {
+    font-family: var(--heading-font-family);
     font-size: 64px;
     line-height: 80px;
 }
-.about-section h2 {
+.content-container h2 {
     font-size: 18px;
     font-family: var(--default-font-family);
 }
 
-about-section-content {
+.content {
     margin: 30px;
+}
+.content-container h3 {
+    font-size: 24px;
+    font-family: var(--default-font-family);
+    line-height: 1.5;
+    margin: 0;
+    font-weight: 700;
+}
+.content-container p {
+    font-size: 14px;
+    font-family: var(--default-font-family);
+    font-weight: 400;
 }
