--- a/src/style.css
+++ b/src/style.css
@@ -44,10 +44,17 @@
 }
 h2 {
     font-size: 64px;
+    font-family: var(--heading-font-family);
+    font-weight: 700;
+}
+.top-part {
+    font-size: 18px;
 }
 p {
     font-size: 16px;
     line-height: 30px;
+    font-family: var(--default-font-family);
+    font-weight: 400;
 }
 .btn-branding-outline {
     font-size: 18px;
@@ -91,6 +98,7 @@ p {
 .content-container h2 {
     font-size: 18px;
     font-family: var(--default-font-family);
+    font-weight: 700;
 }
 
 .content {
