--- a/src/style.css
+++ b/src/style.css
@@ -4,6 +4,10 @@
     --heading-font-family: "Playfair Display", serif;
     --default-font-family: "Poppins", sans-serif;
 }
+.logo {
+    max-height: 40px;
+}
+
 .hero {
     background-color: #f9f7fe;
     text-align: center;
@@ -89,6 +93,9 @@ p {
         text-align: center;
         padding: 0;
     }
+    nav a {
+        font-size: 14px;
+    }
 }
 .content-container h1 {
     font-family: var(--heading-font-family);
@@ -115,4 +122,28 @@ p {
     font-size: 14px;
     font-family: var(--default-font-family);
     font-weight: 400;
+}
+nav {
+    padding: 20px 0;
+}
+nav ul {
+    margin: 0;
+    padding: 0;
+}
+nav li {
+    display: inline;
+    list-style: none;
+    line-height: 42px;
+    font-size: 16px;
+    font-family: var(--default-font-family);
+    margin-left: 15px;
+}
+
+nav a {
+    text-decoration: none;
+    color: #272142;
+}
+nav a:hover,
+nav li.active a {
+    color: var(--branding-color);
 }
