--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Poppins:wght@500;700&display=swap");
 :root {
     --branding-color: #6c63ff;
+    --secondary-color: #6c63ff0d;
     --heading-font-family: "Playfair Display", serif;
     --default-font-family: "Poppins", sans-serif;
 }
@@ -85,18 +86,19 @@ p {
     h2 {
         font-size: 44px;
     }
-    .project-description {
-        padding: 0;
-        text-align: center;
-    }
-    .content-container {
-        text-align: center;
-        padding: 0;
-    }
-    nav a {
-        font-size: 14px;
-    }
 }
+.project-description {
+    padding: 0;
+    text-align: center;
+}
+.content-container {
+    text-align: center;
+    padding: 0;
+}
+nav a {
+    font-size: 14px;
+}
+
 .content-container h1 {
     font-family: var(--heading-font-family);
     font-size: 64px;
@@ -146,4 +148,45 @@ nav a {
 nav a:hover,
 nav li.active a {
     color: var(--branding-color);
+}
+footer {
+    margin: 60px 0;
+}
+footer .contact-box {
+    background-color: var(--secondary-color);
+    padding: 30px 120px;
+    border-radius: 10px;
+}
+footer .contact-box h4 {
+    font-family: var(--heading-font-family);
+    font-weight: 700;
+    font-size: 48px;
+}
+footer .contact-box p {
+    font-family: var(--default-font-family);
+    font-weight: 400;
+    margin: 0;
+}
+footer .email-link {
+    text-decoration: none;
+    color: black;
+    font-size: 24px;
+    font-family: var(--default-font-family);
+    font-weight: 500;
+}
+footer .email-link:hover {
+    color: var(--branding-color);
+}
+footer .social-links a {
+    margin: 0 20px;
+    color: var(--branding-color);
+    background-color: var(--secondary-color);
+    padding: 10px 14px;
+    border-radius: 50%;
+    font-size: 18px;
+    transition: all 100ms ease-in-out;
+}
+footer .social-links a:hover {
+    color: white;
+    background-color: var(--branding-color);
 }
